stylesheets/stylesheet.css
/* ... */
.preview {
  -moz-user-select: none;
  -webkit-user-select: none;
}

.lightfx{
  pointer-events: none;
}


/**** common ****/

.hide-back {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.hidden {
  visibility: hidden;
}

.expand {
  width: 100%;
  height: 100%;
}

.absolute {
  position: absolute;
  top: 0;
  left: 0;
}

.transluent{
  opacity: 0.93;
}


/**** portfolio ****/

.portfolio {
  width: 30%;
  height: 21.2142857%;
  margin: 28.7857143% auto 0 auto;
  position: relative;
}

/* 0.6 x 0.3 x 0.9 x vw */

@media screen and (min-width: 64em) {
  .front.page {
    max-width: 208px;
    max-height: 117px;
  }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .front.page {
    max-width: 14.4vw;
    max-height: 8.1vw;
  }
}

@media screen and (max-width: 42em) {
  .front.page {
    max-width: 27vw;
    max-height: 15.1875vw;
  }
}

.page{
  background-color: #e9eef1;
  background-image: url(../images/placeholder.png);
  background-position: center;
  color: lightslategrey;
}

.outer-cover{
  background-color: seagreen;

  box-shadow: inset -0.08rem 0 0.08rem rgba(255, 255, 255, 0.2),
    inset 0.08rem 0 0.08rem rgba(255, 255, 255, 0.2),
    inset 0 0.1rem 0.1rem rgba(0, 0, 0, 0.35),
    inset 0 -0.15rem 0.15rem rgba(255, 255, 255, 0.2);
}

@media screen and (min-width: 42em) {
  .outer-cover{
    background-image: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(255,255,255,0.2)),
      linear-gradient(45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
      linear-gradient(-45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
      linear-gradient(to bottom, rgba(0, 0, 85, 0) 91.5%, rgba(25, 25, 75, 1) 92%),
      url(../images/portfolio-pattern.png);
  }
}

@media screen and (max-width: 42em) {
  .outer-cover{
    background-image: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(255,255,255,0.2)),
      linear-gradient(45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
      linear-gradient(-45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
      linear-gradient(to bottom, rgba(0, 0, 85, 0) 91.5%, rgba(25, 25, 75, 1) 92%),
      url(../images/portfolio-pattern-sd.png);
  }
}

.outer-cover,
.inner-cover {
  border-radius: 0.35rem 0.35rem 0.2rem 0.2rem;
}

.inner-cover {
  background-color: antiquewhite;

  background-image: linear-gradient(to top, rgba(0,0,0,0.2), rgba(255,255,255,0.2)),
    linear-gradient(45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
    linear-gradient(-45deg, rgba(0, 0, 85, 0) 93%, rgba(25, 25, 75, 1) 93.5%),
    linear-gradient(to right, #246f45 3%, rgba(36,111,69, 0) 3.5%),
    linear-gradient(to left, #246f45 3%, rgba(36,111,69, 0) 3.5%),
    linear-gradient(to bottom, #246f45 4.5%, rgba(36,111,69, 0) 5%);
}

@media screen and (min-width: 42em) {
  .outer-cover {
    background-size: auto, auto, auto, auto, 10vw;
  }
}

@media screen and (max-width: 42em) {
  .outer-cover {
    background-size: auto, auto, auto, auto, 20vw;
  }
}


/**** black hole ****/

.black-hole,
.group-hole {
  width: 100%;
}

.black-hole{
  border-radius: 40%;
}

.group-hole {
  z-index: -1;
}

@media screen and (min-width: 42em) {
  .black-hole{
    background-image: url(../images/stars.png);
  }
}

@media screen and (max-width: 42em) {
  .black-hole{
    background-image: url(../images/stars-sd.png);
  }
}

.root.black-hole{
  opacity: 0.95;
}

.group-hole .black-hole:nth-child(1){
  -webkit-transform: scale(0.75);
  transform: scale(0.75);
  opacity: 0.725;
  z-index: -1;
}

.group-hole .black-hole:nth-child(2){
  -webkit-transform: scale(0.65);
  transform: scale(0.65);
  opacity: 0.5;
  z-index: -2;
}

.group-hole .black-hole:nth-child(3){
  -webkit-transform: scale(0.55);
  transform: scale(0.55);
  opacity: 0.275;
  z-index: -3;
}

.group-hole .black-hole:nth-child(4){
  -webkit-transform: scale(0.45);
  transform: scale(0.45);
  opacity: 0.1;
  z-index: -4;
}

